<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_capuccino"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:text="Cappuccino"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:background="#654321"
        android:gravity="center_vertical|center_horizontal"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/img_relogio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_access_time_24"
        app:layout_constraintTop_toBottomOf="@id/text_capuccino"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/img_coracao"
        android:layout_marginTop="32dp"
        tools:ignore="MissingConstraints" />
    <ImageView
        android:id="@+id/img_coracao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_favorite_24"
        app:layout_constraintTop_toBottomOf="@id/text_capuccino"
        app:layout_constraintLeft_toRightOf="@id/img_relogio"
        android:layout_marginTop="32dp"
        app:layout_constraintRight_toRightOf="parent"
        />
    <View
        android:id="@+id/view_coffe"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@id/img_relogio"
        android:background="#654321"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/text_coffe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view_coffe"
        android:text="@string/descricao"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/ingrediente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_coffe"
        app:layout_constraintVertical_chainStyle="packed"
        android:textColor="#808080"
        android:text="@string/ingredientes"
        android:layout_marginTop="32dp"
        android:textSize="32sp"
        android:paddingStart="10dp"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <ImageView
        android:id="@+id/img_seta1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
        app:layout_constraintTop_toBottomOf="@id/ingrediente"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingStart="15dp"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toLeftOf="@id/ingrediente1"
        tools:ignore="RtlSymmetry"
        />

    <TextView
        android:id="@+id/ingrediente1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ingrediente"
        app:layout_constraintLeft_toRightOf="@id/img_seta1"
        android:textColor="#808080"
        android:text="@string/dosespresso"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="5dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/img_seta2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
        app:layout_constraintTop_toBottomOf="@id/ingrediente1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingStart="15dp"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toLeftOf="@id/ingrediente2"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/ingrediente2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ingrediente1"
        app:layout_constraintLeft_toRightOf="@id/img_seta1"
        android:textColor="#808080"
        android:text="@string/mleite"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="5dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/img_seta3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
        app:layout_constraintTop_toBottomOf="@id/ingrediente2"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingStart="15dp"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toLeftOf="@id/ingrediente3"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/ingrediente3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ingrediente2"
        app:layout_constraintLeft_toRightOf="@id/img_seta1"
        android:textColor="#808080"
        android:text="@string/ingrediente3"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="5dp"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>